force-app/main/default/objects/zisf__ZoomInfo_Clean_Settings__c/zisf__ZoomInfo_Clean_Settings__c.object-meta.xml
<CustomObject>
    <description>Zoominfo Clean Settings</description>
    <label>ZoomInfo Clean Setting</label>
    <nameField>
        <label>ZoomInfo Clean Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZoomInfo Clean Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>