force-app/main/default/objects/zisf__ZoomInfo_Clean_Settings__c/fields/zisf__accounts_clean_rule__c.field-meta.xml
<CustomField>
    <fullName>zisf__accounts_clean_rule__c</fullName>
    <label>accounts clean rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>