force-app/main/default/objects/zisf__ZoomInfo_Clean_Settings__c/fields/zisf__Contact_Updated_Filter__c.field-meta.xml
<CustomField>
    <fullName>zisf__Contact_Updated_Filter__c</fullName>
    <label>Contact Updated Filter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>