force-app/main/default/objects/zisf__ZoomInfo_Clean_Settings__c/fields/zisf__contacts_clean_active__c.field-meta.xml
<CustomField>
    <fullName>zisf__contacts_clean_active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>contacts clean active</label>
    <type>Checkbox</type>
</CustomField>