force-app/main/default/objects/zisf__ZoomInfo_Clean_Settings__c/fields/zisf__Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>zisf__Profile_ID__c</fullName>
    <label>Profile ID or Global</label>
    <length>18</length>
    <type>Text</type>
</CustomField>